--- a/quiz.html
+++ b/quiz.html
@@ -7,6 +7,10 @@
 
 <style>
 
+body {
+    height: 3000px;
+}
+
 .pic {
     position: absolute;
     border: 1px solid black;
@@ -89,7 +93,7 @@
 
     window.addEventListener("load", (event) => {
         window.scrollTo(0, 1);
-        
+
         for (let item of document.getElementsByClassName("plus_10")) {
             item.onclick = function() {
                 score(item.parentNode.id, 10);
