--- a/index.html
+++ b/index.html
@@ -3,28 +3,29 @@
 <head>
     <link rel="manifest" href="manifest.json">
 <style>
-    body {
-        background-image: url('img/main.JPG');
-        background-size: 100%;
-        background-repeat: no-repeat;
-        padding: 0px;
-        margin: 0px;
-        overflow: hidden;
-    }
+body {
+    background-image: url('img/main.JPG');
+    background-size: 125%;
+    background-repeat: no-repeat;
+    padding: 0px;
+    margin: 0px;
+    overflow: hidden;
+    background-position-x: -130px;
+}
 
-    #welcome {
-        width: 100%;
-        position: absolute;
-        text-align: center;
-        vertical-align: middle;
-        margin-top: 10%;
-        color: white;
-        font-family: 'Cinzel Decorative', cursive;
-        font-size: 40pt;
-        letter-spacing: 2pt;
-        color: rgb(209, 159, 71);
-        left: 20%;
-    }
+#welcome {
+    width: 100%;
+    position: absolute;
+    text-align: center;
+    vertical-align: middle;
+    margin-top: 13%;
+    /* color: white; */
+    font-family: 'Cinzel Decorative', cursive;
+    font-size: 31pt;
+    letter-spacing: 2pt;
+    color: rgb(209, 159, 71);
+    left: 23%;
+}
 
     .flying {
         position: absolute;
@@ -57,19 +58,19 @@
         background-image: url('img/owl4.PNG');
     }
 
-    #moon {
-        position: absolute;
-        left: 15%;
-        top: 160px;
-        width: 120px;
-        height: 120px;
-        background-image: url('img/moon.PNG');
-        background-size: 155%;
-        background-position: center;
-        background-repeat: no-repeat;
-        border-radius: 50%;
-        box-shadow: 0 0 60px 10px #fff, 0 0 140px 30px #0ff, 0 0 100px 30px #f0f;
-    }
+#moon {
+    position: absolute;
+    left: 15%;
+    top: 160px;
+    width: 100px;
+    height: 100px;
+    background-image: url('img/moon.PNG');
+    background-size: 155%;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+    box-shadow: 0 0 60px 10px #fff, 0 0 140px 30px #0ff, 0 0 100px 30px #f0f;
+}
 
 </style>
 
