--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ body {
         let duration = Math.floor(Math.random() * 10000);
         setTimeout(
             function() {
-                fly(element, direction);
+                // fly(element, direction);
             }, duration
         );
     }
