--- a/quiz.html
+++ b/quiz.html
@@ -109,59 +109,100 @@ body {
     float: left;
 }
 
-.cloud {
-    background-image: url('img/cloud.PNG');
-    background-position: center;
-    background-repeat: no-repeat;
-/*    border: 5px solid red;*/
-    width: 400px;
-    height: 400px;
+#cloud {
+    height: 183px;
+    width: 200px;
     position: absolute;
-    background-size: 0%;
-    left: -110px;
-    top: -110px;
-
+    background-image: url('img/cloud.PNG');
+    background-repeat: no-repeat;
     font-family: 'Cinzel Decorative', cursive;
+    color: rgb(150, 200, 250);
     text-align: center;
-    color: rgba(150, 200, 250, 0);
     font-size: 100pt;
+    padding-top: 14px;
+    background-size: 100%;
+    display: none;
+    z-index: 100;
+}
+
+#choco-banner {
+    position: absolute;
+    background-image: url('img/choco.PNG');
+    background-size: 100%;
+    width: 1160px;
+    height: 520px;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+    z-index: 100;
+    background-repeat: no-repeat;
+    top: 100px;
     display: none;
 }
 
-.cloud span {
-    position: absolute;
-    top: 110px;
-    left: 110px;
-}</style>
+</style>
 
 <script type="text/javascript" src="cookies.js"></script> 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Henny+Penny&display=swap" rel="stylesheet"> 
 
 <script>
     function score(portrait, amount) {
         setCookie(portrait, getCookie(portrait) * 1 + amount);
     }
 
-    function animate(cloud, text) {
-        cloud.innerHTML = '<span>' + text + '</span>';
-        cloud.style.display = 'block';
+    function animateScore(portrait, text) {
+        const cloud = document.getElementById('cloud');
+        cloud.innerText = text;
+
+        var tl = anime.timeline({
+          targets: cloud,
+          duration: 400,
+          easing: 'linear',
+          begin: function() {
+            cloud.style.top = portrait.offsetTop + 'px';
+            cloud.style.left = portrait.offsetLeft + 'px';
+            cloud.style.display = 'block';
+          },
+          complete: function() {
+            cloud.style.display = 'none';
+          }
+        });
+
+        tl.add({
+            scale: [0, 1]
+        });
+
+        tl.add({
+            scale: [1, 2],
+            opacity: [1, 0]
+        });
+
+    }
+
+    function chocoShow() {
         anime({
-            targets: cloud,
-            'background-size': ['0%', '50%', '100%'],
-            opacity: [1, 1, 0],
-            // 'font-size': ['100pt', '100pt'],
-            color: ['rgba(150, 200, 250, 0)', 'rgba(150, 200, 250, 1)', 'rgba(150, 200, 250, 1)'],
-            duration: 1200,
-            easing: 'linear',
-            complete: function(anim) {
-                cloud.style['background-size'] = '0%';
-                cloud.style.display = 'none';
-                cloud.style.color = 'rgba(150, 200, 250, 0)';
+            targets: document.getElementById('choco-banner'),
+            scale: [0, 1],
+            duration: 700,
+            begin: function(anim) {
+                document.getElementById('choco-banner').style.display = 'block';
             }
+        })
+    }
+
+    function chocoHide() {
+        anime({
+            targets: document.getElementById('choco-banner'),
+            scale: [1, 0],
+            easing: 'linear',
+            duration: 200
         })
     }
 
@@ -169,8 +210,8 @@ body {
         for (let item of document.getElementsByClassName("plus_10")) {
             item.onclick = function() {
                 score(item.parentNode.id, 10);
-                animate(
-                    item.parentNode.getElementsByClassName('cloud').item(0),
+                animateScore(
+                    item.parentNode,
                     "+10"
                 );
             }
@@ -179,8 +220,8 @@ body {
         for (let item of document.getElementsByClassName("plus_5")) {
             item.onclick = function() {
                 score(item.parentNode.id, 5);
-                animate(
-                    item.parentNode.getElementsByClassName('cloud').item(0),
+                animateScore(
+                    item.parentNode,
                     "+5"
                 );
             }
@@ -189,8 +230,8 @@ body {
         for (let item of document.getElementsByClassName("minus_5")) {
             item.onclick = function() {
                 score(item.parentNode.id, -5);
-                animate(
-                    item.parentNode.getElementsByClassName('cloud').item(0),
+                animateScore(
+                    item.parentNode,
                     "-5"
                 );
             }
@@ -202,37 +243,36 @@ body {
 <body>
 </head>
 <body>
-<div class="portrait" id="daniel">
-        <div class="cloud"></div>
+    <div id="choco-banner" onclick="chocoHide()">
+    </div>
+    <div id="cloud"></div>
+
+    <div class="portrait" id="daniel">
         <div class="plus_10"></div>
         <div class="minus_5"></div>
         <div class="plus_5"></div>
     </div>
     <div class="portrait" id="bernd">
-        <div class="cloud"></div>
         <div class="plus_10"></div>
         <div class="minus_5"></div>
         <div class="plus_5"></div>
     </div>
     <div class="portrait" id="lauren">
-        <div class="cloud"></div>
         <div class="plus_10"></div>
         <div class="minus_5"></div>
         <div class="plus_5"></div>
     </div>
     <div class="portrait" id="eline">
-        <div class="cloud"></div>
         <div class="plus_10"></div>
         <div class="minus_5"></div>
         <div class="plus_5"></div>
     </div>
     <div class="portrait" id="mau">
-        <div class="cloud"></div>
         <div class="plus_10"></div>
         <div class="minus_5"></div>
         <div class="plus_5"></div>
     </div>
-    <div class="portrait" id="choco" onclick="choco()"></div>
+    <div class="portrait" id="choco" onclick="chocoShow()"></div>
     <div class="portrait" id="scores" onclick="window.location='end.html'"></div>
     <div class="portrait" id="snacks" onclick="window.location='snacks.html'"></div>
      
