--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="manifest" href="manifest.json">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <style>
 body {
     background-image: url('img/main.JPG');
@@ -14,17 +15,17 @@ body {
 }
 
 #welcome {
-    width: 100%;
+    width: 600px;
     position: absolute;
     text-align: center;
     vertical-align: middle;
     margin-top: 13%;
-    /* color: white; */
     font-family: 'Cinzel Decorative', cursive;
     font-size: 31pt;
     letter-spacing: 2pt;
     color: rgb(209, 159, 71);
-    left: 23%;
+    left: 573px;
+    /* padding-left: 23%; */
 }
 
     .flying {
@@ -94,7 +95,6 @@ body {
             to_x = '-200px';
         }
 
-        element.style.display = 'block';
 
         anime({
           targets: element,
@@ -102,7 +102,11 @@ body {
           translateY: [from_y, to_y],
           duration: 2000,
           easing: 'linear',
+          before: function(anim) {
+            element.style.display = 'block';
+          },
           complete: function(anim) {
+            element.style.display = 'none';
             scheduleFlying(element, direction);
           }
         });
@@ -112,7 +116,7 @@ body {
         let duration = Math.floor(Math.random() * 10000);
         setTimeout(
             function() {
-                // fly(element, direction);
+                fly(element, direction);
             }, duration
         );
     }
@@ -129,6 +133,7 @@ body {
 </head>
 
 <body>
+<div id="try" style="position: absolute;border: 5px solid rebeccapurple;width: 100px;height: 100px;top: 100px;left: 1650px;"></div>
 
     <div id="welcome">WELCOME TO THE 2022<br>HOGWARTS QUIZ</div>
 
