--- a/quiz.html
+++ b/quiz.html
@@ -157,9 +157,10 @@ body {
         setCookie(portrait, getCookie(portrait) * 1 + amount);
     }
 
-    function animateScore(portrait, text) {
+    function animateScore(portrait, text, color) {
         const cloud = document.getElementById('cloud');
         cloud.innerText = text;
+        cloud.style.color = color;
 
         var tl = anime.timeline({
           targets: cloud,
@@ -212,7 +213,9 @@ body {
                 score(item.parentNode.id, 10);
                 animateScore(
                     item.parentNode,
-                    "+10"
+                    "+10",
+                    // "rgb(150, 200, 250)"
+                    "#6dcff6"
                 );
             }
         } 
@@ -222,7 +225,8 @@ body {
                 score(item.parentNode.id, 5);
                 animateScore(
                     item.parentNode,
-                    "+5"
+                    "+5",
+                    "#a3d39c"
                 );
             }
         } 
@@ -232,7 +236,8 @@ body {
                 score(item.parentNode.id, -5);
                 animateScore(
                     item.parentNode,
-                    "-5"
+                    "-5",
+                    "#f49ac1"
                 );
             }
         } 
