--- a/end.html
+++ b/end.html
@@ -53,7 +53,7 @@ body {
     height: 490px;
     /* border: 1px solid white; */
     position: relative;
-    background-image: url('img/tube.PNG');
+    background-image: url('img/tube.png');
     background-size: 69%;
     background-repeat: no-repeat;
     background-position-x: 21px;
@@ -114,7 +114,7 @@ body {
 }
 
 #quiz {
-    background-image: url('img/filch.PNG');
+    background-image: url('img/filch.png');
     background-size: 100%;
     width: 220px;
     height: 280px;
