--- a/snacks.html
+++ b/snacks.html
@@ -41,7 +41,7 @@ body {
     font-family: 'Tangerine', cursive;
     font-size: 91pt;
     letter-spacing: 2pt;
-    color: rgb(209, 159, 71);
+    color: #f5989d;
     padding-top: 650px;
     filter: drop-shadow(5px 5px 5px #000);
 }
